app.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels: 
    app: my-app

spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
  selector: 
    app: my-app
    type: frontend
